--- a/android/app/src/main/res/drawable/rounded_bg_person.xml
+++ b/android/app/src/main/res/drawable/rounded_bg_person.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#6b80b1" />
+    <solid android:color="#b4d0fa" />
     <corners android:radius="5dp" />
     <padding
         android:left="7dp"
