--- a/android/app/src/main/res/layout/activity_admin_panel.xml
+++ b/android/app/src/main/res/layout/activity_admin_panel.xml
@@ -58,6 +58,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="300dp"
             android:orientation="vertical"
             android:padding="16dp">
 
@@ -72,115 +73,162 @@
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <HorizontalScrollView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginHorizontal="1dp"
-                android:orientation="horizontal"
-                android:weightSum="2">
+                android:scrollbars="none">
 
-                <!--Akademisyen-->
-                <androidx.cardview.widget.CardView
-                    android:layout_width="190dp"
-                    android:layout_height="145dp"
-                    android:layout_marginHorizontal="5dp"
-                    android:layout_marginVertical="5dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1"
-                    app:cardBackgroundColor="@android:color/white"
-                    app:cardCornerRadius="13dp"
-                    app:cardElevation="2dp">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:orientation="horizontal"
+                    android:weightSum="3">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:padding="4dp">
+                    <!--Akademisyen-->
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="165dp"
+                        android:layout_height="145dp"
+                        android:layout_marginVertical="5dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
+                        app:cardBackgroundColor="@android:color/white"
+                        app:cardCornerRadius="13dp"
+                        app:cardElevation="2dp">
 
-                        <TextView
-                            android:id="@+id/titleAcademician"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="🎓 Akademisyen"
-                            android:textColor="#000000"
-                            android:textSize="14sp"
-                            android:textStyle="bold" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:orientation="vertical"
+                            android:padding="4dp">
 
-                        <FrameLayout
-                            android:layout_width="100dp"
-                            android:layout_height="100dp">
+                            <TextView
+                                android:id="@+id/titleAcademician"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="🎓 Akademisyen"
+                                android:textColor="#000000"
+                                android:textSize="14sp"
+                                android:textStyle="bold" />
 
-                            <com.example.usiapp.view.academicianView.ProgressCircleView
-                                android:id="@+id/progressCircleAcademician"
-                                android:layout_width="90dp"
-                                android:layout_height="90dp"
-                                android:layout_gravity="center" />
+                            <FrameLayout
+                                android:layout_width="100dp"
+                                android:layout_height="100dp">
 
-                        </FrameLayout>
+                                <com.example.usiapp.view.academicianView.ProgressCircleView
+                                    android:id="@+id/progressCircleAcademician"
+                                    android:layout_width="90dp"
+                                    android:layout_height="90dp"
+                                    android:layout_gravity="center" />
+                            </FrameLayout>
 
-                        <TextView
-                            android:id="@+id/totalAcademician"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Toplam: "
-                            android:textColor="#666666"
-                            android:textSize="13sp" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
+                            <TextView
+                                android:id="@+id/totalAcademician"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Toplam: "
+                                android:textColor="#666666"
+                                android:textSize="13sp" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
 
-                <!--Sanayici-->
-                <androidx.cardview.widget.CardView
-                    android:layout_width="190dp"
-                    android:layout_height="145dp"
-                    android:layout_marginHorizontal="5dp"
-                    android:layout_marginVertical="5dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
-                    app:cardBackgroundColor="@android:color/white"
-                    app:cardCornerRadius="13dp"
-                    app:cardElevation="2dp">
+                    <!--Sanayici-->
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="165dp"
+                        android:layout_height="145dp"
+                        android:layout_marginHorizontal="5dp"
+                        android:layout_marginVertical="5dp"
+                        app:cardBackgroundColor="@android:color/white"
+                        app:cardCornerRadius="13dp"
+                        app:cardElevation="2dp">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:padding="4dp">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:orientation="vertical"
+                            android:padding="4dp">
 
-                        <TextView
-                            android:id="@+id/titleIndustry"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="🏭 Sanayici"
-                            android:textColor="#000000"
-                            android:textSize="14sp"
-                            android:textStyle="bold" />
+                            <TextView
+                                android:id="@+id/titleIndustry"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="🏭 Sanayici"
+                                android:textColor="#000000"
+                                android:textSize="14sp"
+                                android:textStyle="bold" />
 
-                        <FrameLayout
-                            android:layout_width="100dp"
-                            android:layout_height="100dp">
+                            <FrameLayout
+                                android:layout_width="100dp"
+                                android:layout_height="100dp">
 
-                            <com.example.usiapp.view.academicianView.ProgressCircleView
-                                android:id="@+id/progressCircleIndustry"
-                                android:layout_width="90dp"
-                                android:layout_height="90dp"
-                                android:layout_gravity="center" />
+                                <com.example.usiapp.view.academicianView.ProgressCircleView
+                                    android:id="@+id/progressCircleIndustry"
+                                    android:layout_width="90dp"
+                                    android:layout_height="90dp"
+                                    android:layout_gravity="center" />
+                            </FrameLayout>
 
-                        </FrameLayout>
+                            <TextView
+                                android:id="@+id/totalIndustry"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Toplam: "
+                                android:textColor="#777777"
+                                android:textSize="12sp" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
 
-                        <TextView
-                            android:id="@+id/totalIndustry"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Toplam: "
-                            android:textColor="#777777"
-                            android:textSize="12sp" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
+                    <!--Öğrenci-->
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="165dp"
+                        android:layout_height="145dp"
+                        android:layout_marginHorizontal="5dp"
+                        android:layout_marginVertical="5dp"
+                        app:cardBackgroundColor="@android:color/white"
+                        app:cardCornerRadius="13dp"
+                        app:cardElevation="2dp">
 
-            </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:orientation="vertical"
+                            android:padding="4dp">
+
+                            <TextView
+                                android:id="@+id/titleStudent"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="👩🏻‍🎓 Öğrenci"
+                                android:textColor="#000000"
+                                android:textSize="14sp"
+                                android:textStyle="bold" />
+
+                            <FrameLayout
+                                android:layout_width="100dp"
+                                android:layout_height="100dp">
+
+                                <com.example.usiapp.view.academicianView.ProgressCircleView
+                                    android:id="@+id/progressCircleStudent"
+                                    android:layout_width="90dp"
+                                    android:layout_height="90dp"
+                                    android:layout_gravity="center" />
+                            </FrameLayout>
+
+                            <TextView
+                                android:id="@+id/totalStudent"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Toplam: "
+                                android:textColor="#777777"
+                                android:textSize="12sp" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+            </HorizontalScrollView>
 
 
             <!-- Talep İstatistikleri -->
@@ -449,7 +497,7 @@
                 android:layout_marginHorizontal="1dp"
                 android:layout_marginVertical="5dp"
                 android:layout_marginTop="2dp"
-                android:layout_marginBottom="150dp"
+                android:layout_marginBottom="50dp"
                 app:cardBackgroundColor="#FFFFFF"
                 app:cardCornerRadius="12dp"
                 app:cardElevation="2dp">
@@ -461,28 +509,23 @@
                     android:padding="5dp">
 
                     <!-- Bekleyen Talepler -->
-                    <LinearLayout
+
+                    <Button
+                        android:id="@+id/btnBekleyenTalepler"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:layout_height="50dp"
+                        android:layout_marginVertical="3dp"
+                        android:backgroundTint="#FFFFFF"
+                        android:elevation="2dp"
+                        android:gravity="start|center_vertical"
+                        android:onClick="pendingRequests"
+                        android:paddingStart="16dp"
+                        android:text="🕗 Bekleyen Talepler"
+                        android:textColor="#000000"
+                        android:textStyle="bold"
+                        app:cornerRadius="10dp"
+                        tools:ignore="OnClick" />
 
-                        <Button
-                            android:id="@+id/btnBekleyenTalepler"
-                            android:layout_width="match_parent"
-                            android:layout_height="50dp"
-                            android:layout_marginVertical="3dp"
-                            android:backgroundTint="#FFFFFF"
-                            android:elevation="2dp"
-                            android:gravity="start|center_vertical"
-                            android:onClick="pendingRequests"
-                            android:paddingStart="16dp"
-                            android:text="🕗 Bekleyen Talepler"
-                            android:textColor="#000000"
-                            android:textStyle="bold"
-                            app:cornerRadius="10dp"
-                            tools:ignore="OnClick" />
-
-                    </LinearLayout>
 
                     <View
                         android:layout_width="match_parent"
