--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="30dp"
         android:onClick="clickStudent"
-        android:text="Öğrenciyim"
+        android:text="Öğrenci"
         android:textColor="#000000"
         android:textSize="16sp"
         app:backgroundTint="#EEEEEE"
@@ -82,7 +82,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
         android:onClick="clickAcademician"
-        android:text="Akademisyenim"
+        android:text="Akademisyen"
         android:textColor="#000000"
         android:textSize="16sp"
         app:backgroundTint="#EEEEEE"
@@ -99,7 +99,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
         android:onClick="clickIndustry"
-        android:text="Sanayiciyim"
+        android:text="Sanayici"
         android:textColor="#000000"
         android:textSize="16sp"
         app:backgroundTint="#EEEEEE"
@@ -113,8 +113,8 @@
         android:id="@+id/footerText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="5dp"
         android:layout_gravity="center"
+        android:layout_marginHorizontal="5dp"
         android:layout_marginBottom="200dp"
         android:text="@string/footer_text"
         android:textAlignment="center"
