--- a/android/app/src/main/res/layout/activity_request_detail.xml
+++ b/android/app/src/main/res/layout/activity_request_detail.xml
@@ -130,7 +130,6 @@
                     android:textStyle="bold"
                     android:visibility="gone" />
 
-
                 <View
                     android:id="@+id/view2"
                     android:layout_width="match_parent"
@@ -143,7 +142,7 @@
                     android:id="@+id/usiContainer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="15dp"
+                    android:layout_marginTop="15dp"
                     android:orientation="horizontal"
                     android:visibility="gone">
 
@@ -160,7 +159,6 @@
                         android:layout_width="280dp"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
-
 
                         <TextView
                             android:layout_width="match_parent"
@@ -202,13 +200,9 @@
                                 android:textColor="#124090"
                                 android:textSize="12sp"
                                 android:textStyle="bold" />
-
-
                         </LinearLayout>
 
-
                         <TextView
-
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="2dp"
@@ -216,8 +210,33 @@
                             android:textColor="#666666"
                             android:textSize="12sp"
                             android:textStyle="bold" />
-
                     </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/isPublished"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="15dp"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:layout_gravity="center"
+                        android:layout_marginRight="5dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/attention_blue" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Talebiniz Açık Talep sayfasında yayına alınmıştır."
+                        android:textColor="#666666"
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -225,7 +244,7 @@
                     android:id="@+id/view3"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginVertical="-2dp"
+                    android:layout_marginVertical="-1dp"
                     android:background="#DDDDDD"
                     android:visibility="gone" />
 
@@ -287,14 +306,29 @@
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/detailDate"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
-                    android:text=""
-                    android:textColor="#666666"
-                    android:textSize="14sp" />
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:layout_gravity="center"
+                        android:layout_marginRight="5dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/calendar_blue_icon" />
+
+                    <TextView
+                        android:id="@+id/detailDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:textColor="#666666"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
 
                 <!-- Kategori Başlığı -->
                 <TextView
@@ -307,19 +341,66 @@
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
-                <!-- Kategoriler - Flexbox ile gösterim -->
-                <com.google.android.flexbox.FlexboxLayout
-                    android:id="@+id/detailCategoryContainer"
+                <!-- Kategoriler -->
+                <HorizontalScrollView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:orientation="horizontal"
-                    app:flexWrap="wrap"
-                    app:justifyContent="flex_start" />
+                    android:layout_marginBottom="15dp"
+                    android:overScrollMode="never"
+                    android:scrollbars="none">
+
+                    <LinearLayout
+                        android:id="@+id/detailCategoryContainer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:paddingEnd="16dp" />
+                </HorizontalScrollView>
+
+                <!-- Atananlar -->
+                <TextView
+                    android:id="@+id/appointLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="7dp"
+                    android:text="Atananlar"
+                    android:textColor="#333333"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:id="@+id/appointCardContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingVertical="5dp">
+
+                    <LinearLayout
+                        android:id="@+id/isApply"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:visibility="visible">
+
+                        <ImageView
+                            android:layout_width="16dp"
+                            android:layout_height="16dp"
+                            android:layout_gravity="center"
+                            android:layout_marginRight="5dp"
+                            android:src="@drawable/apply_icon" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Bu talebe henüz başvuru yapılmamış"
+                            android:textColor="#000000"
+                            android:textSize="13sp" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
 
             </LinearLayout>
-
-
         </LinearLayout>
     </ScrollView>
 
