--- a/android/app/src/main/res/layout/item_admin_card.xml
+++ b/android/app/src/main/res/layout/item_admin_card.xml
@@ -56,17 +56,14 @@
                     android:id="@+id/requesterTypeTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:background="@drawable/rounded_bg_person"
+                    android:layout_marginTop="1dp"
                     android:clipToOutline="true"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:paddingHorizontal="8dp"
-                    android:paddingVertical="2dp"
                     android:singleLine="true"
                     android:text="Talep Tipi"
-                    android:textColor="#FFFFFF"
-                    android:textSize="11sp" />
+                    android:textColor="#000000"
+                    android:textSize="13sp" />
             </LinearLayout>
 
             <!-- Sağdaki detay ikonu -->
@@ -84,7 +81,7 @@
             android:id="@+id/adminRequestMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="12dp"
             android:ellipsize="end"
             android:maxLines="3"
             android:scrollHorizontally="false"
@@ -94,22 +91,80 @@
             android:textSize="14sp" />
 
         <!-- Talep oluşturulma tarihi -->
-        <TextView
-            android:id="@+id/adminRequestDate"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:text="22.07.2025"
-            android:textColor="#666666"
-            android:textSize="13sp" />
+            android:gravity="center"
+            android:layout_marginTop="12dp"
+            android:orientation="horizontal">
+
+            <!-- Tarih -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="40dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_gravity="center"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/calendar_blue_icon"/>
+
+                <TextView
+                    android:id="@+id/adminRequestDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:text="22.07.2025"
+                    android:textColor="#666666"
+                    android:textSize="13sp" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/isOpenRequestImage"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/open_req_icon"/>
+
+                <TextView
+                    android:id="@+id/isOpenRequestText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:scrollHorizontally="false"
+                    android:singleLine="false"
+                    android:text="Açık talep mi "
+                    android:textColor="#000000"
+                    android:textSize="13sp"
+                    android:visibility="gone" />
+
+
+            </LinearLayout>
+
+
+        </LinearLayout>
 
         <!-- KATEGORİLER -->
         <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="12dp"
             android:overScrollMode="never"
             android:scrollbars="none">
 
