--- a/android/app/src/main/res/layout/item_request_card.xml
+++ b/android/app/src/main/res/layout/item_request_card.xml
@@ -44,9 +44,9 @@
                     android:id="@+id/requestMessage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="9dp"
+                    android:layout_marginTop="10dp"
                     android:ellipsize="end"
-                    android:maxLines="2"
+                    android:maxLines="3"
                     android:scrollHorizontally="false"
                     android:singleLine="false"
                     android:text="Talep açıklaması..."
@@ -56,23 +56,80 @@
 
         </LinearLayout>
 
-        <!-- Tarih -->
-        <TextView
-            android:id="@+id/requestDate"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="9dp"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:text="📆 22.07.2025"
-            android:textColor="#666666"
-            android:textSize="13sp" />
+            android:gravity="center"
+            android:layout_marginTop="12dp"
+            android:orientation="horizontal">
+
+            <!-- Tarih -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="40dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_gravity="center"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/calendar_blue_icon"/>
+
+                <TextView
+                    android:id="@+id/requestDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:text="22.07.2025"
+                    android:textColor="#666666"
+                    android:textSize="13sp" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/isOpenRequestImage"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/open_req_icon"/>
+
+                <TextView
+                    android:id="@+id/isOpenRequestText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:scrollHorizontally="false"
+                    android:singleLine="false"
+                    android:text="Açık talep mi "
+                    android:textColor="#000000"
+                    android:textSize="13sp"
+                    android:visibility="gone" />
+
+
+            </LinearLayout>
+
+
+        </LinearLayout>
 
         <!-- Kategoriler -->
         <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="9dp"
+            android:layout_marginTop="12dp"
             android:overScrollMode="never"
             android:scrollbars="none">
 
@@ -83,20 +140,6 @@
                 android:orientation="horizontal"
                 android:paddingEnd="16dp" />
         </HorizontalScrollView>
-
-        <TextView
-            android:id="@+id/isOpenRequestText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="9dp"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:scrollHorizontally="false"
-            android:singleLine="false"
-            android:text="Açık talep mi "
-            android:textColor="#666666"
-            android:textSize="14sp"
-            android:visibility="gone" />
 
     </LinearLayout>
 
