--- a/android/app/src/main/res/layout/activity_appoint_academician.xml
+++ b/android/app/src/main/res/layout/activity_appoint_academician.xml
@@ -72,6 +72,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:backgroundTint="#124090"
+        android:visibility="gone"
         android:elevation="8dp"
         android:onClick="appointAcademician"
         android:text="Akademisyen Ata"
