--- a/android/app/src/main/res/layout/activity_industry_settings.xml
+++ b/android/app/src/main/res/layout/activity_industry_settings.xml
@@ -350,12 +350,12 @@
                             android:src="@drawable/forward_icon" />
                     </LinearLayout>
 
-                    <!-- Şifremi Unuttum -->
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:background="#DDDDDD" />
 
+                    <!-- Şifremi Unuttum -->
                     <LinearLayout
                         android:id="@+id/opinionAndSuggestion"
                         android:layout_width="match_parent"
@@ -375,6 +375,43 @@
                             android:layout_marginStart="12dp"
                             android:layout_weight="1"
                             android:text="Görüş &amp; Öneri Gönder"
+                            android:textColor="#000000"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+                        <ImageView
+                            android:layout_width="17dp"
+                            android:layout_height="17dp"
+                            android:src="@drawable/forward_icon" />
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#DDDDDD" />
+
+                    <!-- Hesap Silme -->
+                    <LinearLayout
+                        android:id="@+id/deleteAccount"
+                        android:layout_width="match_parent"
+                        android:layout_height="55dp"
+                        android:gravity="center_vertical"
+                        android:onClick="deleteAccount"
+                        android:orientation="horizontal"
+                        android:paddingHorizontal="12dp"
+                        tools:ignore="OnClick">
+
+                        <ImageView
+                            android:layout_width="23dp"
+                            android:layout_height="23dp"
+                            android:src="@drawable/exit_icon" />
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="12dp"
+                            android:layout_weight="1"
+                            android:text="Hesabımı Sil"
                             android:textColor="#000000"
                             android:textSize="14sp"
                             android:textStyle="bold" />
