--- a/android/app/src/main/res/layout/activity_request_content.xml
+++ b/android/app/src/main/res/layout/activity_request_content.xml
@@ -164,6 +164,22 @@
                 android:thumbTint="@color/white"
                 android:trackTint="#124090" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginHorizontal="10dp"
+                android:hint="Talep konusu"
+                android:text="@string/openRequestText"
+                android:textColor="#8A8585"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/switchRequestType" />
+
+
             <Button
                 android:id="@+id/btnCreateRequest"
                 android:layout_width="match_parent"
