--- a/android/app/src/main/res/layout/activity_request_detail_academician.xml
+++ b/android/app/src/main/res/layout/activity_request_detail_academician.xml
@@ -139,7 +139,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginBottom="7dp"
                     android:orientation="horizontal"
                     android:visibility="gone">
 
@@ -350,7 +350,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="7dp"
-                    android:text="Atananlar"
+                    android:text="Başvuru Yapanlar"
+                    android:visibility="visible"
                     android:textColor="#333333"
                     android:textSize="15sp"
                     android:textStyle="bold" />
@@ -359,6 +360,7 @@
                     android:id="@+id/appointCardContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="visible"
                     android:orientation="vertical"
                     android:paddingVertical="5dp">
 
@@ -366,8 +368,7 @@
                         android:id="@+id/isApply"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:visibility="visible">
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:layout_width="16dp"
