--- a/android/app/src/main/res/layout/activity_request_detail_student.xml
+++ b/android/app/src/main/res/layout/activity_request_detail_student.xml
@@ -138,6 +138,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
+                    android:layout_marginBottom="7dp"
                     android:orientation="horizontal"
                     android:visibility="gone">
 
@@ -348,7 +349,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="7dp"
-                    android:text="Atananlar"
+                    android:visibility="visible"
+                    android:text="Başvuru Yapanlar"
                     android:textColor="#333333"
                     android:textSize="15sp"
                     android:textStyle="bold" />
@@ -358,14 +360,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:visibility="visible"
                     android:paddingVertical="5dp">
 
                     <LinearLayout
                         android:id="@+id/isApply"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:visibility="visible">
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:layout_width="16dp"
