--- a/android/app/src/main/res/layout/activity_request_subject_student.xml
+++ b/android/app/src/main/res/layout/activity_request_subject_student.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="#FFFFFF"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".view.studentView.RequestSubjectStudentActivity">
 
     <!--Header-->
@@ -97,9 +97,9 @@
                 android:id="@+id/reqTitle"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_gravity="center"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="10dp"
-                android:layout_gravity="center"
                 android:background="@drawable/edittext_bg"
                 android:gravity="start|top"
                 android:inputType="textMultiLine"
@@ -140,9 +140,9 @@
                 android:id="@+id/reqMessage"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
+                android:layout_gravity="center"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="10dp"
-                android:layout_gravity="center"
                 android:background="@drawable/edittext_bg"
                 android:ems="15"
                 android:gravity="start|top"
@@ -159,19 +159,35 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="10dp"
-                android:trackTint="#124090"
-                android:thumbTint="@color/white"
                 android:text="Açık Talep Olarak İşaretle"
-                android:textStyle="bold"
                 android:textColor="#222222"
-                android:textSize="15sp"/>
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:thumbTint="@color/white"
+                android:trackTint="#124090" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="5dp"
+                android:hint="Talep konusu"
+                android:text="@string/openRequestText"
+                android:textAlignment="center"
+                android:textColor="#8A8585"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/switchRequestType" />
+
 
             <Button
                 android:id="@+id/btnCreateRequest"
                 android:layout_width="match_parent"
                 android:layout_height="52dp"
-                android:layout_marginHorizontal="20dp"
                 android:layout_gravity="center"
+                android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="400dp"
                 android:backgroundTint="#124090"
