--- a/android/app/src/main/res/layout/item_apply_users.xml
+++ b/android/app/src/main/res/layout/item_apply_users.xml
@@ -5,8 +5,8 @@
     android:layout_height="wrap_content"
     android:layout_marginVertical="10dp"
     android:onClick="onApplyUserCardClick"
-    app:cardBackgroundColor="@android:color/white"
-    app:cardCornerRadius="15dp"
+    app:cardBackgroundColor="#e8ecf4"
+    app:cardCornerRadius="10dp"
     app:cardElevation="1dp">
 
     <LinearLayout
