--- a/android/app/src/main/res/layout/stat_card_summary.xml
+++ b/android/app/src/main/res/layout/stat_card_summary.xml
@@ -59,7 +59,7 @@
             <ImageView
                 android:layout_width="28dp"
                 android:layout_height="28dp"
-                android:src="@drawable/employee_icon" />
+                android:src="@drawable/baseline_factory_24" />
 
             <TextView
                 android:id="@+id/industryCountText"
@@ -172,7 +172,7 @@
                 android:textSize="11sp" />
         </LinearLayout>
     </LinearLayout>
-    
+
 </androidx.cardview.widget.CardView>
 
 
